src/frontend/app/shared/components/list/list.component.scss
.list-component {
  *,
  .sort,
  .filter,
  .add-container {
    &[hidden] {
      display: none;
    }
  }
  &__cards {
    .list-component__header-card {
      margin-bottom: 20px;
    }
  }
  &__table {
    .list-component__header-card {
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
    }
    .list-component__paginator {
      border-top-left-radius: 0;
      border-top-right-radius: 0;
    }
  }
  &__blocker {
    bottom: 0;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 999;
  }
  &__body-inner {
    position: relative;
  }
  $title-left-padding: 25px;
  $title-content-padding: 10px;
  &__header {
    position: relative;
    mat-progress-bar {
      position: absolute;
      top: -5px;
    }
    mat-card {
      display: flex;
    }
    &-card {
      flex-wrap: wrap;
      justify-content: space-between;
    }
    &__left,
    &__right {
      align-items: center;
      display: flex;
      flex-direction: row;
      > div {
        &:not(:last-of-type) {
          padding-right: $title-content-padding;
        }
        &:not([hidden]) {
          align-items: center;
          display: flex;
        }
      }
    }
    &__left {
      flex: 1;
      &--text {
        padding: 10px;
      }
      &--multi-filters {
        mat-form-field {
          padding-right: $title-content-padding;
        }
      }
    }
    > mat-card {
      min-height: 74px;
      padding: 0 24px;
      width: 100%;
    }
  }
  &__body {
    .no-rows {
      padding: 20px $title-left-padding;
    }
    mat-card {
      &[hidden] {
        display: none;
      }
    }
  }
  &__paginator {
    padding: 4px;
    mat-paginator-container {
      padding: 0;
    }
  }
}

